--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -40,8 +40,14 @@ article {
       @apply px-2 p-1 text-xs rounded text-blue-600 dark:text-grey-400 bg-grey-100 dark:bg-grey-800 shadow;
     }
   }
-  ol, ul {
+  ul {
     @apply list-image-[url('~/assets/images/check.png')] dark:list-image-[url('~/assets/images/check-dark.png')] -ml-1 mb-6 leading-relaxed;
+    li {
+      @apply mb-2 pl-1;
+    }
+  }
+  ol {
+    @apply -ml-1 mb-6 leading-relaxed list-decimal;
     li {
       @apply mb-2 pl-1;
     }
@@ -65,14 +71,14 @@ article {
   }
 
   blockquote {
-    @apply border-l-2 pl-5 border-blue-600 -ml-5;
+    @apply border-l-2 pl-5 border-blue-600 dark:border-grey-400 -ml-5;
     p {
-      @apply text-lg italic text-blue-600 py-0;
+      @apply text-lg italic text-blue-600 dark:text-grey-400 py-0;
     }
   }
 
   aside {
-    @apply bg-blue-500 text-grey-100 p-6 rounded-md shadow-md;
+    @apply bg-grey-100 text-blue-500 p-5 rounded-md shadow-md leading-relaxed dark:bg-grey-800 dark:text-grey-400;
   }
 }
 
