--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -47,7 +47,7 @@ article {
     }
   }
   ol {
-    @apply -ml-1 mb-6 leading-relaxed list-decimal;
+    @apply ml-4 sm:-ml-1 mb-6 leading-relaxed list-decimal;
     li {
       @apply mb-2 pl-1;
     }
@@ -62,23 +62,20 @@ article {
   pre {
     @apply mb-6 md:-mx-16 py-4 px-5 text-sm rounded-md overflow-x-auto font-mono bg-grey-100 dark:bg-grey-800 shadow-md;
   }
-
+  blockquote {
+    @apply border-l-8 pl-5 border-grey-400 dark:border-blue-300 sm:-ml-5;
+    p {
+      @apply text-lg italic text-blue-600 dark:text-grey-400 py-0;
+    }
+  }
+  aside {
+    @apply bg-grey-100 text-blue-500 p-5 rounded-md shadow-md leading-relaxed dark:bg-grey-800 dark:text-grey-400;
+  }
   @media (max-width: 1024px) {
     pre {
       margin-left: 0;
       margin-right: 0;
     }
-  }
-
-  blockquote {
-    @apply border-l-2 pl-5 border-blue-600 dark:border-grey-400 -ml-5;
-    p {
-      @apply text-lg italic text-blue-600 dark:text-grey-400 py-0;
-    }
-  }
-
-  aside {
-    @apply bg-grey-100 text-blue-500 p-5 rounded-md shadow-md leading-relaxed dark:bg-grey-800 dark:text-grey-400;
   }
 }
 
