--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -67,6 +67,13 @@ article {
     p {
       @apply text-lg italic text-blue-600 dark:text-grey-400 py-0;
     }
+    a {
+      @apply underline text-blue-600 dark:text-grey-400;
+
+      &:hover {
+        @apply text-blue-400 dark:text-grey-100;
+      }
+    }
   }
   aside {
     @apply bg-grey-100 text-blue-500 p-5 rounded-md shadow-md leading-relaxed dark:bg-grey-800 dark:text-grey-400;
