--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -23,11 +23,11 @@ main {
 }
 
 article {
-    @apply w-full md:max-w-screen-md mx-auto sm:px-8 md:px-16;
+    @apply w-full md:max-w-screen-md mx-auto;
 }
 
 article h1 {
-    @apply text-3xl sm:text-4xl font-bold mb-6 text-blue-600 dark:text-grey-400 tracking-tight;
+    @apply text-3xl sm:text-4xl font-bold mb-8 text-blue-600 dark:text-grey-400 tracking-tight;
 }
 
 article h2 {
@@ -75,15 +75,17 @@ article a:hover {
 }
 
 article pre {
-    @apply mb-6 md:-mx-16 py-2 px-3 text-sm rounded-md overflow-x-auto font-mono bg-grey-100 dark:bg-grey-800 shadow-md;
+    @apply mb-6 py-2 px-3 text-sm rounded-md overflow-x-auto font-mono bg-grey-100 dark:bg-grey-800 shadow-md;
 }
 
 article blockquote {
-    @apply border-l-8 pl-5 border-grey-400 dark:border-blue-300 sm:-ml-5;
+    @apply text-blue-700 dark:text-grey-100 pl-14 pr-5 shadow-md bg-grey-100 dark:bg-grey-800 rounded-md mb-6 bg-[url('../../content/assets/images/quote.svg')] bg-no-repeat fill-grey-400;
+    background-size: 25px;
+    background-position: 15px 10px;
 }
 
 article blockquote p {
-    @apply text-lg italic text-blue-600 dark:text-grey-400 py-0;
+    @apply py-3 mb-0;
 }
 
 article blockquote a {
@@ -95,7 +97,9 @@ article blockquote a:hover {
 }
 
 article aside {
-    @apply bg-grey-100 text-blue-500 p-5 rounded-md shadow-md leading-relaxed dark:bg-grey-800 dark:text-grey-400;
+    @apply text-blue-600 dark:text-grey-100 pl-14 pr-5 py-3 shadow-md bg-grey-100 dark:bg-grey-800 leading-relaxed rounded-md mb-8 bg-[url('../../content/assets/images/bulb.svg')] bg-no-repeat fill-grey-400;
+    background-size: 25px;
+    background-position: 15px 15px;
 }
 
 @media (max-width: 1024px) {
