--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -18,12 +18,13 @@
     @apply bg-grey-800 text-grey-200;
 }
 
-main {
-    @apply text-blue-400 dark:text-grey-500;
-}
 
 article {
     @apply w-full md:max-w-screen-md mx-auto;
+}
+
+article.full {
+    @apply max-w-screen-lg;
 }
 
 article h1 {
@@ -31,39 +32,39 @@ article h1 {
 }
 
 article h2 {
-    @apply font-bold text-2xl mt-8 mb-4 text-blue-500 dark:text-blue-200 leading-tight tracking-tight;
+    @apply font-bold text-2xl mt-8 mb-6 text-blue-600 dark:text-grey-400 leading-tight tracking-tight;
 }
 
 article h3 {
-    @apply font-semibold text-xl mb-4;
+    @apply text-blue-600 dark:text-grey-400 font-semibold text-xl/7 mb-6;
 }
 
 article h4 {
-    @apply font-semibold leading-normal mb-1;
+    @apply text-blue-600 dark:text-grey-400 font-semibold text-lg/7 mb-1;
 }
 
 article p {
-    @apply mb-6 text-base/7;
+    @apply mb-6 text-lg/8;
 }
 
 article p code {
-    @apply px-2 p-1 text-xs rounded text-blue-600 dark:text-grey-400 bg-grey-100 dark:bg-grey-800 shadow;
+    @apply px-2 p-1 text-base/8 rounded text-blue-600 dark:text-grey-400 bg-grey-100 dark:bg-grey-800 shadow;
 }
 
 article ul {
-    @apply list-image-[url('/content/assets/images/check.png')] dark:list-image-[url('/content/assets/images/check-dark.png')] -ml-1 mb-6 leading-relaxed;
+    @apply mb-10 ml-6 text-lg/8 list-disc;
 }
 
 article ul li {
-    @apply mb-2 pl-1;
+    @apply mb-3 pl-2;
 }
 
 article ol {
-    @apply ml-4 sm:-ml-1 mb-6 leading-relaxed list-decimal;
+    @apply mb-10 ml-6 text-lg/8 list-decimal;
 }
 
 article ol li {
-    @apply mb-2 pl-1;
+    @apply mb-3 pl-2;
 }
 
 article a {
@@ -79,27 +80,39 @@ article pre {
 }
 
 article blockquote {
-    @apply text-blue-700 dark:text-grey-100 pl-14 pr-5 shadow-md bg-grey-100 dark:bg-grey-800 rounded-md mb-6 bg-[url('../../content/assets/images/quote.svg')] bg-no-repeat fill-grey-400;
+    @apply text-xl/7 mb-8 bg-[url('../../content/assets/images/quote.svg')] bg-no-repeat font-bold pt-2 pl-10;
     background-size: 25px;
-    background-position: 15px 10px;
+    background-position: 5px 0;
 }
 
 article blockquote p {
-    @apply py-3 mb-0;
+    @apply text-xl/7;
 }
 
 article blockquote a {
-    @apply underline text-blue-600 dark:text-grey-400 cursor-pointer;
+    @apply underline text-pink cursor-pointer;
 }
 
 article blockquote a:hover {
-    @apply text-blue-400 dark:text-grey-100;
+    @apply text-blue-600 dark:text-grey-100;
 }
 
 article aside {
-    @apply text-blue-600 dark:text-grey-100 pl-14 pr-5 py-3 shadow-md bg-grey-100 dark:bg-grey-800 leading-relaxed rounded-md mb-8 bg-[url('../../content/assets/images/bulb.svg')] bg-no-repeat fill-grey-400;
+    @apply text-lg/6 text-blue-600 dark:text-grey-100 pl-16 pr-5 py-3 shadow-md bg-grey-100 dark:bg-grey-800 leading-relaxed rounded-md mb-8 bg-[url('../../content/assets/images/bulb.svg')] bg-no-repeat fill-grey-400;
     background-size: 25px;
-    background-position: 15px 15px;
+    background-position: 18px 15px;
+}
+
+article aside a {
+    @apply text-blue-400 dark:text-grey-100;
+}
+
+article aside a:hover {
+    @apply text-blue-600 dark:text-grey-100;
+}
+
+article aside p {
+    @apply text-lg/6;
 }
 
 @media (max-width: 1024px) {
