--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -38,7 +38,11 @@ article.full {
 }
 
 article h1 {
-    @apply font-title text-5xl font-extrabold mb-8 text-primary dark:text-content tracking-tight;
+    @apply font-title text-4xl font-extrabold mb-8 text-primary dark:text-content tracking-tight;
+}
+
+article h1.large {
+    @apply text-4xl sm:text-5xl;
 }
 
 article h2 {
@@ -62,19 +66,19 @@ article p code {
 }
 
 article ul {
-    @apply mb-10 ml-6 text-lg/7 list-disc;
+    @apply mb-10 ml-6 text-lg/6 sm:text-lg/7 list-disc;
 }
 
 article ul li {
-    @apply mb-3 pl-2;
+    @apply mb-3 pl-1;
 }
 
 article ol {
-    @apply mb-10 ml-6 text-lg/7 list-decimal;
+    @apply mb-10 ml-6 text-lg/6 sm:text-lg/7 list-decimal;
 }
 
 article ol li {
-    @apply mb-3 pl-2;
+    @apply mb-3 pl-1;
 }
 
 article strong {
